chore: add maven support